Adapting unit-test