@@ -15,6 +15,7 @@
  */
 package de.cuioss.jwt.validation.domain.claim;
 
+import de.cuioss.test.generator.junit.EnableGeneratorController;
 import de.cuioss.test.juli.junit5.EnableTestLogger;
 import jakarta.json.Json;
 import jakarta.json.JsonObject;
@@ -30,7 +31,6 @@ import org.junit.jupiter.params.provider.ValueSource;
 import java.time.Instant;
 import java.time.OffsetDateTime;
 import java.time.ZoneOffset;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Stream;
@@ -38,60 +38,53 @@ import java.util.stream.Stream;
 import static org.junit.jupiter.api.Assertions.*;
 
 @EnableTestLogger
+@EnableGeneratorController
 @DisplayName("Tests ClaimName functionality")
 class ClaimNameTest {
 
     @ParameterizedTest
     @MethodSource("provideClaimNameMapTestData")
-    @DisplayName("Should correctly map claims from JsonObject")
+    @DisplayName("Map claims from JsonObject")
     void shouldMapClaimsFromJsonObject(ClaimName claimName, JsonObject jsonObject, ClaimValue expectedValue) {
-        // When
         ClaimValue result = claimName.map(jsonObject);
 
-        // Then
         assertNotNull(result, "Result should not be null");
-        assertEquals(expectedValue.getType(), result.getType(), "Type should match");
-        assertEquals(expectedValue.getOriginalString(), result.getOriginalString(), "Original string should match");
+        assertEquals(expectedValue.getType(), result.getType(), "Type should match expected");
+        assertEquals(expectedValue.getOriginalString(), result.getOriginalString(), "Original string should match expected");
 
-        // Additional checks based on type
         if (expectedValue.getType() == ClaimValueType.STRING_LIST) {
-            assertEquals(expectedValue.getAsList(), result.getAsList(), "List values should match");
+            assertEquals(expectedValue.getAsList(), result.getAsList(), "List values should match expected");
         } else if (expectedValue.getType() == ClaimValueType.DATETIME) {
-            assertEquals(expectedValue.getDateTime(), result.getDateTime(), "DateTime values should match");
+            assertEquals(expectedValue.getDateTime(), result.getDateTime(), "DateTime values should match expected");
         }
     }
 
     static Stream<Arguments> provideClaimNameMapTestData() {
         return Stream.of(
-                // ISSUER - String type
                 Arguments.of(
                         ClaimName.ISSUER,
                         createJsonObjectWithStringClaim("iss", "https://example.com"),
                         ClaimValue.forPlainString("https://example.com")
                 ),
 
-                // SUBJECT - String type
                 Arguments.of(
                         ClaimName.SUBJECT,
                         createJsonObjectWithStringClaim("sub", "user123"),
                         ClaimValue.forPlainString("user123")
                 ),
 
-                // AUDIENCE - String list type - need to adapt expected value to match actual implementation
                 Arguments.of(
                         ClaimName.AUDIENCE,
-                        createJsonObjectWithArrayClaim("aud", Arrays.asList("client1", "client2")),
-                        ClaimValue.forList("[\"client1\",\"client2\"]", Arrays.asList("client1", "client2"))
+                        createJsonObjectWithArrayClaim("aud", List.of("client1", "client2")),
+                        ClaimValue.forList("[\"client1\",\"client2\"]", List.of("client1", "client2"))
                 ),
 
-                // Single audience as string
                 Arguments.of(
                         ClaimName.AUDIENCE,
                         createJsonObjectWithStringClaim("aud", "singleClient"),
                         ClaimValue.forList("singleClient", List.of("singleClient"))
                 ),
 
-                // EXPIRATION - DateTime type - need to use system timezone to match implementation
                 Arguments.of(
                         ClaimName.EXPIRATION,
                         createJsonObjectWithNumericClaim("exp", 1609459200),
@@ -101,7 +94,6 @@ class ClaimNameTest {
                         )
                 ),
 
-                // NOT_BEFORE - DateTime type - need to use system timezone to match implementation
                 Arguments.of(
                         ClaimName.NOT_BEFORE,
                         createJsonObjectWithNumericClaim("nbf", 1609459200),
@@ -111,7 +103,6 @@ class ClaimNameTest {
                         )
                 ),
 
-                // ISSUED_AT - DateTime type - need to use system timezone to match implementation
                 Arguments.of(
                         ClaimName.ISSUED_AT,
                         createJsonObjectWithNumericClaim("iat", 1609459200),
@@ -121,91 +112,78 @@ class ClaimNameTest {
                         )
                 ),
 
-                // TOKEN_ID - String type
                 Arguments.of(
                         ClaimName.TOKEN_ID,
                         createJsonObjectWithStringClaim("jti", "token123"),
                         ClaimValue.forPlainString("token123")
                 ),
 
-                // NAME - String type
                 Arguments.of(
                         ClaimName.NAME,
                         createJsonObjectWithStringClaim("name", "John Doe"),
                         ClaimValue.forPlainString("John Doe")
                 ),
 
-                // EMAIL - String type
                 Arguments.of(
                         ClaimName.EMAIL,
                         createJsonObjectWithStringClaim("email", "john@example.com"),
                         ClaimValue.forPlainString("john@example.com")
                 ),
 
-                // PREFERRED_USERNAME - String type
                 Arguments.of(
                         ClaimName.PREFERRED_USERNAME,
                         createJsonObjectWithStringClaim("preferred_username", "johndoe"),
                         ClaimValue.forPlainString("johndoe")
                 ),
 
-                // SCOPE - String list type (space-separated)
                 Arguments.of(
                         ClaimName.SCOPE,
                         createJsonObjectWithStringClaim("scope", "email openid profile"),
-                        ClaimValue.forList("email openid profile", Arrays.asList("email", "openid", "profile"))
+                        ClaimValue.forList("email openid profile", List.of("email", "openid", "profile"))
                 ),
 
-                // TYPE - String type
                 Arguments.of(
                         ClaimName.TYPE,
                         createJsonObjectWithStringClaim("typ", "JWT"),
                         ClaimValue.forPlainString("JWT")
                 ),
 
-                // ROLES - String list type
                 Arguments.of(
                         ClaimName.ROLES,
-                        createJsonObjectWithArrayClaim("roles", Arrays.asList("admin", "user", "manager")),
-                        ClaimValue.forList("[\"admin\",\"user\",\"manager\"]", Arrays.asList("admin", "user", "manager"))
+                        createJsonObjectWithArrayClaim("roles", List.of("admin", "user", "manager")),
+                        ClaimValue.forList("[\"admin\",\"user\",\"manager\"]", List.of("admin", "user", "manager"))
                 ),
 
-                // ROLES - Single role as string
                 Arguments.of(
                         ClaimName.ROLES,
                         createJsonObjectWithStringClaim("roles", "admin"),
                         ClaimValue.forList("admin", List.of("admin"))
                 ),
 
-                // GROUPS - String list type
                 Arguments.of(
                         ClaimName.GROUPS,
-                        createJsonObjectWithArrayClaim("groups", Arrays.asList("group1", "group2", "group3")),
-                        ClaimValue.forList("[\"group1\",\"group2\",\"group3\"]", Arrays.asList("group1", "group2", "group3"))
+                        createJsonObjectWithArrayClaim("groups", List.of("group1", "group2", "group3")),
+                        ClaimValue.forList("[\"group1\",\"group2\",\"group3\"]", List.of("group1", "group2", "group3"))
                 ),
 
-                // GROUPS - Single group as string
                 Arguments.of(
                         ClaimName.GROUPS,
                         createJsonObjectWithStringClaim("groups", "group1"),
                         ClaimValue.forList("group1", List.of("group1"))
                 ),
 
-                // AUTHORIZED_PARTY - String type
                 Arguments.of(
                         ClaimName.AUTHORIZED_PARTY,
                         createJsonObjectWithStringClaim("azp", "client123"),
                         ClaimValue.forPlainString("client123")
                 ),
 
-                // Missing claims
                 Arguments.of(
                         ClaimName.ISSUER,
                         Json.createObjectBuilder().build(),
                         ClaimValue.createEmptyClaimValue(ClaimValueType.STRING)
                 ),
 
-                // Null claims
                 Arguments.of(
                         ClaimName.SUBJECT,
                         createJsonObjectWithNullClaim("sub"),
@@ -213,9 +191,6 @@ class ClaimNameTest {
                 )
         );
     }
-
-    // Helper methods for creating test JsonObjects
-
     private static JsonObject createJsonObjectWithStringClaim(String claimName, String value) {
         JsonObjectBuilder builder = Json.createObjectBuilder();
         if (value != null) {
@@ -252,7 +227,6 @@ class ClaimNameTest {
     @DisplayName("Should have correct name and value type for each enum value")
     @SuppressWarnings("java:S5961") // owolff: Suppressing this warning as the test is designed to check enum values
     void shouldHaveCorrectNameAndValueType() {
-        // Given, When, Then
         assertEquals("iss", ClaimName.ISSUER.getName());
         assertEquals(ClaimValueType.STRING, ClaimName.ISSUER.getValueType());
 
@@ -302,25 +276,20 @@ class ClaimNameTest {
     @Test
     @DisplayName("Should find ClaimName by string name")
     void shouldFindClaimNameByString() {
-        // Given
+
         String issuerName = "iss";
-
-        // When
         Optional<ClaimName> result = ClaimName.fromString(issuerName);
-
-        // Then
-        assertTrue(result.isPresent(), "Should find a ClaimName for 'iss'");
-        assertEquals(ClaimName.ISSUER, result.get(), "Should return ISSUER enum value");
+        assertTrue(result.isPresent());
+        assertEquals(ClaimName.ISSUER, result.get());
     }
 
     @Test
     @DisplayName("Should find all ClaimName values by their string names")
     void shouldFindAllClaimNamesByString() {
-        // Given, When, Then
         for (ClaimName claimName : ClaimName.values()) {
             Optional<ClaimName> result = ClaimName.fromString(claimName.getName());
-            assertTrue(result.isPresent(), "Should find ClaimName for " + claimName.getName());
-            assertEquals(claimName, result.get(), "Should return correct enum value");
+            assertTrue(result.isPresent());
+            assertEquals(claimName, result.get());
         }
     }
 
@@ -329,10 +298,7 @@ class ClaimNameTest {
     @ValueSource(strings = {"unknown", "invalid", " ", "ISS", "Iss"})
     @DisplayName("Should return empty Optional for null, empty, or unknown claim names")
     void shouldReturnEmptyForUnknownNames(String input) {
-        // Given, When
         Optional<ClaimName> result = ClaimName.fromString(input);
-
-        // Then
-        assertFalse(result.isPresent(), "Should return empty Optional for invalid input: " + input);
+        assertFalse(result.isPresent());
     }
 }
